deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mop-fullstack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mop-fullstack
  template:
    metadata:
      labels:
        app: mop-fullstack
    spec:
      containers:
        - name: mop-fullstack
          image: vinodreddy1999/manufacturing-operations-platform-fullstack:0.2.1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
